removed connect bar

--- a/index.html
+++ b/index.html
@@ -53,18 +53,13 @@
         </section>
       </main>
     </div>
-    <nav class="foot-nav">
-      <h3 title="click to open" class="nav-toggle">Connect</h3>
-      <ul>
-        <li><a target="_blank" href="https://www.linkedin.com/in/andreas-soedharto-617934145/"><i class="fab fa-linkedin"></i> linkedin</a></li>
-        <li><a target="_blank" href="https://github.com/PeterAndreas77"><i class="fab fa-github"></i> github</a></li>
-        <li><a target="_blank" href="https://codepen.io/PeterAndreas77/"><i class="fab fa-codepen"></i> codepen</a></li>
-        <li><a target="_blank" href="https://www.codewars.com/users/Lenzark"><i class="fas fa-code"></i> codewars</a></li>
-      </ul>
-    </nav>
     <footer>
       <div class="footer">
-        <p>2018 &copy; Andreas Soedharto <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> <i class="fab fa-js"></i></p>
+        <p>2018 &copy; Andreas Soedharto
+          <span class="links"><a target="_blank" href="https://www.linkedin.com/in/andreas-soedharto-617934145/"><i class="fab fa-linkedin"></i></a></span>
+          <span class="links"><a target="_blank" href="https://github.com/PeterAndreas77"><i class="fab fa-github"></i></a></span>
+          <span class="links"><a target="_blank" href="https://www.codewars.com/users/Lenzark"><i class="fas fa-code"></i></a></span>
+        </p>
       </div>
     </footer>
   </div>
