--- a/index.html
+++ b/index.html
@@ -1,72 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href="index.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
-<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="manifest" href="manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
-<title>Astro Card App</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+      integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono"
+      rel="stylesheet"
+    />
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="android-icon-192x192.png"
+    />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>Astro Card App</title>
+  </head>
 
-<body>
-  <canvas id="canvas"></canvas>
-  <div class="container">
-    <header class="header" role="banner">
-      <a href="https://www.nasa.gov/" target="_blank"> <img class="logo" src="https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/nasa-logo.svg" alt="NASA Logo"></a>
-      <h1>Astro Card</h1>
-    </header>
+  <body>
+    <canvas id="canvas"></canvas>
+    <div class="container">
+      <header class="header" role="banner">
+        <a href="https://www.nasa.gov/" target="_blank">
+          <img
+            class="logo"
+            src="https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/nasa-logo.svg"
+            alt="NASA Logo"
+        /></a>
+        <h1>Astro Card</h1>
+      </header>
 
-    <div class="content">
-      <main role="main">
-        <form class="js-form">
-          <fieldset>
-            <legend>Date Picker</legend>
-            <label for="date">Enter Date</label>
-            <input type="date" id="date" name="date" min="1995-06-16" max="" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}">
-            <span class="validity"></span>
-            <button id="get-btn" type="submit">Get Card</button>
-          </fieldset>
-        </form>
-        <div>
-          <span class="animation-controls">background animation controls</span> <button id="play-btn">&#9658;</button>
-          <button id="pause-btn">&#10074;&#10074;</button>
-        </div>
-        <section class="js-result" role="contentinfo" aria-hidden="true" aria-live="polite">
-        </section>
-      </main>
-    </div>
-    <footer>
-      <div class="footer">
-        <p>2018 &copy; Andreas Soedharto
-          <span class="links"><a target="_blank" href="https://www.linkedin.com/in/andreas-soedharto-617934145/"><i class="fab fa-linkedin"></i></a></span>
-          <span class="links"><a target="_blank" href="https://github.com/PeterAndreas77"><i class="fab fa-github"></i></a></span>
-          <span class="links"><a target="_blank" href="https://www.codewars.com/users/Lenzark"><i class="fas fa-code"></i></a></span>
-        </p>
+      <div class="content">
+        <main role="main">
+          <form class="js-form">
+            <fieldset>
+              <legend>Date Picker</legend>
+              <label for="date">Enter Date</label>
+              <input
+                type="date"
+                id="date"
+                name="date"
+                min="1995-06-16"
+                max=""
+                required
+                pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
+              />
+              <span class="validity"></span>
+              <button id="get-btn" type="submit">Get Card</button>
+            </fieldset>
+          </form>
+          <div>
+            <span class="animation-controls"
+              >background animation controls</span
+            >
+            <button id="play-btn">&#9658;</button>
+            <button id="pause-btn">&#10074;&#10074;</button>
+          </div>
+          <section
+            class="js-result"
+            role="contentinfo"
+            aria-hidden="true"
+            aria-live="polite"
+          ></section>
+        </main>
       </div>
-    </footer>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.13/howler.core.min.js"></script>
-  <script src="canvas.js"></script>
-  <script src="index.js"></script>
-</body>
-
+      <footer>
+        <div class="footer">
+          <p>
+            2018 &copy; Andreas Soedharto
+            <span class="links"
+              ><a
+                target="_blank"
+                href="https://www.linkedin.com/in/andreas-soedharto-617934145/"
+                ><i class="fab fa-linkedin"></i></a
+            ></span>
+            <span class="links"
+              ><a target="_blank" href="https://github.com/PeterAndreas77"
+                ><i class="fab fa-github"></i></a
+            ></span>
+            <span class="links"
+              ><a target="_blank" href="https://www.codewars.com/users/Lenzark"
+                ><i class="fas fa-code"></i></a
+            ></span>
+          </p>
+        </div>
+      </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.13/howler.core.min.js"></script>
+    <script src="canvas.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
