--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <span class="animation-controls">Background controls</span>
             <button id="play-btn">&#9658;</button>
             <button id="pause-btn">&#10074;&#10074;</button>
-            <span class="manual-control">Manual</span>
+            <span class="manual-control">Check out the Manual</span>
             <button id="open-modal">?</button>
           </div>
           <div id="manual-modal">
